--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,48 @@
     font-size:18px;
 }
 
+.label
+{
+ color:black;  
+border-bottom: 4px solid black;
+font-weight:bold;
+}
+
+#stats
+{
+    margin-top:20px;
+    padding:30px;
+    color:black;
+}
+
+#person
+{
+    margin-bottom:-50px;
+    border: 2px solid black;
+}
+
+#portfolioblack
+{
+    background-color:black;
+    padding:10px;
+    height:100px;
+    color:white;
+    padding-top:20px;
+}
+
+#headingportfolio
+{
+    color:white;
+    display:inline;
+    margin-left:30px;
+}
+
+h1
+{
+    color:white;
+    font-size:30px;
+}
+
 #foregoHeading
 {
     color:white;
@@ -35,6 +77,8 @@
     margin:1.66%;
     overflow:hidden;
     border: 2px solid black;
+    cursor: pointer;
+    background-color:white;
 }
 
 .content {
@@ -58,10 +102,43 @@
     font-size:18px;
     text-align:center;
     padding:5px;
-    cursor: pointer;
 }
 
 /**/
+
+.square2 {
+    float:left;
+    position: relative;
+    width: 30%;
+    padding-bottom : 30%; /* = width for a 1:1 aspect ratio */
+    margin:1.66%;
+    overflow:hidden;
+    cursor: pointer;
+    background-color:white;
+}
+
+.content2 {
+    position:absolute;
+    height:80%; /* = 100% - 2*10% padding */
+    width:90%; /* = 100% - 2*5% padding */
+    padding: 10% 5%;
+}
+.table2{
+    display:table;
+    height:100%;
+    width:100%;
+}
+.table-cell2{
+    display:table-cell;
+    vertical-align:middle;
+    height:100%;
+    width:100%;
+    color:black;
+    font-weight:bold;
+    font-size:18px;
+    text-align:center;
+    padding:5px;
+}
 
 a
 {
