--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,6 @@ font-weight:bold;
 
 #stats
 {
-    margin-top:20px;
     padding:30px;
     color:black;
 }
@@ -117,27 +116,10 @@ h1
     background-color:white;
 }
 
-.content2 {
-    position:absolute;
-    height:80%; /* = 100% - 2*10% padding */
-    width:90%; /* = 100% - 2*5% padding */
-    padding: 10% 5%;
-}
-.table2{
-    display:table;
-    height:100%;
-    width:100%;
-}
-.table-cell2{
-    display:table-cell;
-    vertical-align:middle;
-    height:100%;
-    width:100%;
-    color:black;
-    font-weight:bold;
-    font-size:18px;
-    text-align:center;
-    padding:5px;
+hr
+{
+    background-color:black;
+    height:4px;
 }
 
 a
